# Piscine-Python-DataScience

./: pyrightconfig.json  requirements.txt
python_00/ex00/: Hello.py
python_00/ex01/: format_ft_time.py
python_00/ex02/: find_ft_type.py
python_00/ex03/: NULL_not_found.py
python_00/ex04/: whatis.py
python_00/ex05/: building.py
python_00/ex06/: filterstring.py  ft_filter.py
python_00/ex07/: sos.py
python_00/ex08/: Loading.py  tester.py
python_00/ex09/ft_package/: LICENSE  README.md  setup.cfg
python_00/ex09/ft_package/examples/: client.py  server.py
python_00/ex09/ft_package/src/tcpio/: Client.py  Event.py  IO.py  Message.py  Server.py  SocketIO.py  __init__.py
python_01/ex00/: give_bmi.py
python_01/ex01/: array2D.py
python_01/ex03/: zoom.py
python_01/ex04/: animal_zoomed.npy  load_image.py  rotate.py  zoom.py
python_01/ex05/: load_image.py  pimp_image.py  tester.py
python_02/ex00/: load_csv.py  tester.py
python_02/ex01/: aff_life.py
python_02/ex02/: aff_pop.py  load_csv.py
python_02/ex03/: load_csv.py  projection_life.py
python_03/ex00/: S1E9.py  tester.py
python_03/ex01/: S1E7.py  S1E9.py  tester.py
python_03/ex02/: DiamondTrap.py  S1E7.py  S1E9.py
python_03/ex03/: ft_calculator.py  tester.py
python_03/ex04/: ft_calculator.py
python_04/ex00/: statistics.py  tester.py
python_04/ex01/: in_out.py
python_04/ex02/: callLimit.py
python_04/ex03/: new_student.py  tester.py
