[metadata]
name = tcpio
version = 0.1
author = lsuardi
author_email = lsuardi@student.42.fr
description = A simple TCP client/server library
long_description = file: README.md
license = MIT
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.10
install_requires =
    typing_extensions
zip_safe = False
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
